blog page complete

--- a/blog.html
+++ b/blog.html
@@ -37,31 +37,15 @@
 
     <!-- Section featured -->
 
-    <section class="featured">
-        <div class="container featured__container">
-
-            <div class="post__thumbnail">
-                <img src="./images/blog1.jpg" alt="">
-            </div>
-            <div class="post__info">
-                <a href="" class="category__button">Wild Life</a>
-                <h2 class="post__title"><a href="post.html">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, recusandae!</a></h2>
-                <p class="post__body">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia architecto iusto sunt quod, qui minima commodi obcaecati consequuntur debitis eveniet, sapiente, quibusdam dolor adipisci dolorem.
-                </p>
-                <div class="post_author">
-                    <div class="post__author-avatar">
-                        <img src="./images/avatar2.jpg" alt="">
-                    </div>
-
-                    <div class="post__author-info">
-                        <h5>By: Ahmed Nabib</h5>
-                        <small>june34, 2022 </small>
-                    </div>
-                </div>
-            </div>
+  <section class="search__bar">
+    <form action="" class="container search__bar-container">
+        <div>
+            <i class="uil uil-search"></i>
+            <input type="search" name="" placeholder="search">
         </div>
-    </section>
+        <button type="submit" class="btn">GO</button>
+    </form>
+  </section>
 
     <!-- Posts Section -->
 
