--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
 
            <button type="submit" class="btn">Sign Up</button>
 
-           <small>Alredy have an account ? <a href="signin.html">signin</a>  </small>
+           <small>Alredy have an account ? <a href="siginin.html">signin</a>  </small>
         </form>
 
     </div>
