add post page complete

--- a/add-categoty.html
+++ b/add-categoty.html
@@ -43,12 +43,12 @@
 
 		<section class="form__section">
 			<div class="container form__section-container">
-				<h2>Sign Up</h2>
+				<h2>Add Category</h2>
 				<div class="alert__message error">
 					<p>This is error message</p>
 				</div>
 
-				<form action="">
+				<form action="" enctype="multipart/form-data">
 					<input type="text" placeholder="Title" />
 
 					<textarea name="" id="" rows="4">Description</textarea>
