add user complete

--- a/add-post.html
+++ b/add-post.html
@@ -61,7 +61,7 @@
                     </select>
 					<textarea name="" id="" rows="10">Body</textarea>
 
-                    <div class="form__control inline">
+                    <div class="form__control inlinePa">
                         <input type="checkbox" id="is_featured">
                         <label for="is_featured" checked> Featured</label>
                     </div>
