edit post,category,user complete

--- a/add-post.html
+++ b/add-post.html
@@ -61,9 +61,9 @@
                     </select>
 					<textarea name="" id="" rows="10">Body</textarea>
 
-                    <div class="form__control inlinePa">
-                        <input type="checkbox" id="is_featured">
-                        <label for="is_featured" checked> Featured</label>
+                    <div class="form__control inline">
+                        <input type="checkbox" id="is_featured" checked>
+                        <label for="is_featured" > Featured</label>
                     </div>
 
                     <div class="form__control">
